NEW277505
Regression: http/tests/media/media-element-frame-destroyed-crash.html flaky crashing due to nullptr in LocalFrameView::AutoPreventLayerAccess
https://bugs.webkit.org/show_bug.cgi?id=277505
Summary Regression: http/tests/media/media-element-frame-destroyed-crash.html flaky c...
Matt Woodrow
Reported 2024-08-01 14:52:47 PDT
Attachments
Matt Woodrow
Comment 1 2024-08-01 14:55:33 PDT
Note You need to log in before you can comment on or make changes to this bug.