Regression: http/tests/media/media-element-frame-destroyed-crash.html flaky crashing due to nullptr in LocalFrameView::AutoPreventLayerAccess. https://bugs.webkit.org/show_bug.cgi?id=277505 <rdar://132904989>

Reviewed by NOBODY (OOPS!).

Flushing layout can result in the view going away, we shouldn't unconditionally
dereference it.

* Source/WebCore/dom/Element.cpp:
(WebCore::Element::boundingClientRect):
* Source/WebCore/page/LocalFrameView.h: